Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,19 +22,29 @@
       <h1>
 <a id="jw-cad-for-mac" class="anchor" href="#jw-cad-for-mac" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JW-CAD for Mac</h1>
 
-<hr>
+<h1></h1>
 
 <h3>
 <a id="ver20160601" class="anchor" href="#ver20160601" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ver.2016.06.01</h3>
 
-<p>"JW-CAD for Mac" は、Windows版 "Jw_cad"（以下Jww）をMacのOSXでも使えるようにしたフリーウェア・ソフトです。</p>
+<p>　"JW-CAD for Mac" は、Windows版 "Jw_cad"（以下Jww）をMacのOSXでも使えるように工夫したフリーウェア・ソフトです。</p>
+
+<hr>
+
+<p>■JW-CAD for Mac 公式サイト : <a href="http://keinos.github.io/Jw_cad-for-Mac/">http://keinos.github.io/Jw_cad-for-Mac</a></p>
+
+<p>■JW-CAD for Mac 情報交換 : <a href="https://groups.google.com/forum/embed/?#!forum/jw-cad_for_mac">https://groups.google.com/forum/embed/?#!forum/jw-cad_for_mac</a> </p>
+
+<p>■本家 Jw_cad : <a href="http://www.jwcad.net/">http://www.jwcad.net/</a></p>
 
 <h2>
 <a id="概要" class="anchor" href="#%E6%A6%82%E8%A6%81" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>概要</h2>
 
-<p>DOSの時代からある日本の老舗CADソフト"<a href="http://www.jwcad.net/">Jw_cad</a>"のWindows版を、Windowsユーザー以外にも幅広く知ってもらいたい・使ってもらいたいという願望から、UNIX、とりわけMacのOSXでも使えるように<a href="http://ja.wikipedia.org/wiki/Wine">Wine</a>と<a href="http://www.jwcad.net/">Jw_cad</a>（Ver.7.11）を<a href="http://wineskin.urgesoftware.com/">Wineskin Winery</a>を使って1つのアプリとしてラッピングしたものです。</p>
+<p>　DOSの時代からある日本の老舗CADソフト"<a href="http://www.jwcad.net/">Jw_cad</a>"のWindows版を、Windowsユーザー以外にも幅広く知ってもらいたい・使ってもらいたいという願望から、UNIX、とりわけMacのOSXでも使えるように<a href="http://ja.wikipedia.org/wiki/Wine">Wine</a>と<a href="http://www.jwcad.net/">Jw_cad</a>を<a href="http://wineskin.urgesoftware.com/">Wineskin Winery</a>を使って1つのアプリとしてラッピングしたものです。</p>
 
-<p>なお、内包されているJwwは、Ver.7.11をプログラムの改変なく、設定も そのままの状態（インストール直後の状態）なので、各種設定やカスタムはご自身で行っていただく必要があります。</p>
+<p>　ダウンロードすると、Jwwの安定バージョン(Ver.7.11)と最新バージョン(Ver.8系)の２つが同梱されています。</p>
+
+<p>　なお、内包されているJwwは、本体プログラムの改変なく、設定も そのままの状態（インストール直後の状態）なので、各種設定やカスタムはご自身で行っていただく必要があります。</p>
 
 <h2>
 <a id="主な対象者" class="anchor" href="#%E4%B8%BB%E3%81%AA%E5%AF%BE%E8%B1%A1%E8%80%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>主な対象者</h2>
@@ -59,10 +69,24 @@
 </ul>
 
 <h2>
+<a id="サポート情報共有faqqaなど" class="anchor" href="#%E3%82%B5%E3%83%9D%E3%83%BC%E3%83%88%E6%83%85%E5%A0%B1%E5%85%B1%E6%9C%89faqqa%E3%81%AA%E3%81%A9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>サポート(情報共有・FAQ・Q＆Aなど）</h2>
+
+<p>　有志によるアプリであるため特別なサポートはありませんが、掲示板を用意しましたので、ユーザー間でサポートしあえれば嬉しいです。</p>
+
+<p>また、「こんな環境で動作したよ」といった情報なども掲示板で共有してください。</p>
+
+<ul>
+<li>
+<a href="https://groups.google.com/forum/embed/?#!forum/jw-cad_for_mac">JW-CAD for Mac 掲示板</a> </li>
+</ul>
+
+<p><strong>【注意】　"JW-CAD for Mac"やMac OSXに依存する質問（インストールの仕方や文字化け）などは、本家の方に質問されないようにしてください。</strong></p>
+
+<h2>
 <a id="内包アプリのバージョン" class="anchor" href="#%E5%86%85%E5%8C%85%E3%82%A2%E3%83%97%E3%83%AA%E3%81%AE%E3%83%90%E3%83%BC%E3%82%B8%E3%83%A7%E3%83%B3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>内包アプリのバージョン</h2>
 
 <ul>
-<li>Jw_cad : 7.11</li>
+<li>Jw_cad : 7.11, 8.01a</li>
 <li>Wine : 1.9.11</li>
 <li>Wineskin : 2.6.2</li>
 </ul>
@@ -74,7 +98,8 @@
 <a id="os" class="anchor" href="#os" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OS</h3>
 
 <ul>
-<li>OS X 10.11.5 El Capitan @ MacBook Pro, Retina 13-inch, Early 2015</li>
+<li><p>OS X 10.11.5 El Capitan @ MacBook Pro, Retina 13-inch, Early 2015</p></li>
+<li><p>※Ver.8.0x系の最新版に関しては、私自身があまり使っていないこともあり十分な動作確認がされていません。情報いただけるとありがたいです。</p></li>
 </ul>
 
 <h3>
@@ -89,9 +114,9 @@
 <a id="簡易インストール手順" class="anchor" href="#%E7%B0%A1%E6%98%93%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB%E6%89%8B%E9%A0%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>簡易インストール手順</h2>
 
 <ol>
-<li>"JW-CAD_for_Mac.7z.001"と"JW-CAD_for_Mac.7z.002"の2つのファイルをダウンロードします。</li>
-<li>7z形式で分割圧縮されているので <a href="https://itunes.apple.com/jp/app/the-unarchiver/id425424353">"The Unarchiver"</a> などで解凍します。</li>
-<li>解凍された"JW-CAD_for_Mac"アプリをアプリケーションフォルダなどに移動します。Jwwアプリ内から"C:"ドライブにデータを保存するとアプリ内に保存されるため、ユーザーフォルダ内の方のアプリケーションフォルダに設置するのが望ましいです。</li>
+<li>"JW-CAD_for_Mac"の公式サイトにある"Download .zip"よりファイルをダウンロードし、解凍します。</li>
+<li>解凍されると"JW-CAD_Ver.x.x_for_Mac"とJw_cadのバージョンにあわせたアプリが出来るので、利用したい方をアプリケーションフォルダなどに移動します。</li>
+<li>Jwwアプリ内から"C:"ドライブにデータを保存するとアプリ内に保存されるため、ユーザーフォルダ内の方のアプリケーションフォルダに設置するのが望ましいです。</li>
 <li>設置したアプリを、右クリック（control+クリック）して「開く」を選択し、警告画面でも「開く」を選ぶとアプリが起動します。</li>
 <li>アプリのショートカットをドックなどに登録するなど、呼び出しやすいようにしてください。</li>
 </ol>
@@ -109,7 +134,9 @@
 <h2>
 <a id="アプリの使い方" class="anchor" href="#%E3%82%A2%E3%83%97%E3%83%AA%E3%81%AE%E4%BD%BF%E3%81%84%E6%96%B9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>アプリの使い方</h2>
 
-<p>アプリ自体はWindows版Jw_cadそのものなので、たくさん出ているJw_cad本、ネットやフォーラムなどを参考にしてください。</p>
+<p>　アプリ自体はWindows版Jw_cadそのものなので、たくさん出ているJw_cad本、ネットやフォーラムなどを参考にしてください。</p>
+
+<p>　JW-CAD for MacおよびMacに特有の不具合や質問は、<strong>本家の方には問い合わせない</strong>ようにお願いいたします。</p>
 
 <h3>
 <a id="操作の参考リンク" class="anchor" href="#%E6%93%8D%E4%BD%9C%E3%81%AE%E5%8F%82%E8%80%83%E3%83%AA%E3%83%B3%E3%82%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>操作の参考リンク</h3>
@@ -152,6 +179,16 @@
 <ul>
 <li>著作者: Doh123 &amp; the Wineskin Project</li>
 <li>公式サイト: <a href="http://wineskin.urgesoftware.com/">http://wineskin.urgesoftware.com/</a>
+</li>
+<li>ライセンス: GNU LGPL v2.1</li>
+</ul>
+
+<h3>
+<a id="jw-cad-for-mac-1" class="anchor" href="#jw-cad-for-mac-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JW-CAD for Mac</h3>
+
+<ul>
+<li>著作者: KEINOS &amp; JW-CAD for Mac Project</li>
+<li>公式サイト: <a href="http://keinos.github.io/Jw_cad-for-Mac">http://keinos.github.io/Jw_cad-for-Mac</a>
 </li>
 <li>ライセンス: GNU LGPL v2.1</li>
 </ul>
