htmlのlangをen-us->jaへ変更
gh-pagesの変更テストかねて。

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="ja">
   <head>
     <meta charset="UTF-8">
     <title>JW-CAD for Mac by KEINOS</title>
@@ -27,7 +27,7 @@
 <h3>
 <a id="ver20160601" class="anchor" href="#ver20160601" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ver.2016.06.01</h3>
 
-<p>　"JW-CAD for Mac" は、Windows版 "Jw_cad"（以下Jww）をMacのOSXでも使えるように工夫したフリーウェア・ソフトです。</p>
+<p>　"JW-CAD for Mac" は、Windows版 "Jw_cad"（以下Jww）をMacのOSXでも使えるように工夫したフリーウェア・ソフトです。x</p>
 
 <hr>
 
