--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="jw-cad-for-mac" class="anchor" href="#jw-cad-for-mac" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JW-CAD for Mac</h1>
+    <div class="ninja_onebutton">
+    <script type="text/javascript">
+    //<![CDATA[
+    (function(d){
+    if(typeof(window.NINJA_CO_JP_ONETAG_BUTTON_e2aef6f1b469ac17ed853c3386d4904e)=='undefined'){
+    document.write("<sc"+"ript type='text\/javascript' src='\/\/omt.shinobi.jp\/b\/e2aef6f1b469ac17ed853c3386d4904e'><\/sc"+"ript>");
+    }else{
+    window.NINJA_CO_JP_ONETAG_BUTTON_e2aef6f1b469ac17ed853c3386d4904e.ONETAGButton_Load();}
+    })(document);
+    //]]>
+    </script><span class="ninja_onebutton_hidden" style="display:none;"></span><span style="display:none;" class="ninja_onebutton_hidden"></span>
+    </div>
+
+<h1><a id="jw-cad-for-mac" class="anchor" href="#jw-cad-for-mac" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JW-CAD for Mac</h1>
 
 <h1></h1>
 
@@ -28,18 +40,6 @@
 <a id="ver20160601" class="anchor" href="#ver20160601" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ver.2016.06.01</h3>
 
 <p>　"JW-CAD for Mac" は、Windows版 "Jw_cad"（以下Jww）をMacのOSXでも使えるように工夫したフリーウェア・ソフトです。x</p>
-<div class="ninja_onebutton">
-<script type="text/javascript">
-//<![CDATA[
-(function(d){
-if(typeof(window.NINJA_CO_JP_ONETAG_BUTTON_e2aef6f1b469ac17ed853c3386d4904e)=='undefined'){
-document.write("<sc"+"ript type='text\/javascript' src='\/\/omt.shinobi.jp\/b\/e2aef6f1b469ac17ed853c3386d4904e'><\/sc"+"ript>");
-}else{
-window.NINJA_CO_JP_ONETAG_BUTTON_e2aef6f1b469ac17ed853c3386d4904e.ONETAGButton_Load();}
-})(document);
-//]]>
-</script><span class="ninja_onebutton_hidden" style="display:none;"></span><span style="display:none;" class="ninja_onebutton_hidden"></span>
-</div>
 
 <hr>
 
