ソーシャルタグ（ボタン）の位置修正

--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
       <a href="https://github.com/KEINOS/Jw_cad-for-Mac" class="btn">View on GitHub</a>
       <a href="https://github.com/KEINOS/Jw_cad-for-Mac/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/KEINOS/Jw_cad-for-Mac/tarball/master" class="btn">Download .tar.gz</a>
+      <div class="ninja_onebutton">
+      <script type="text/javascript">
+      //<![CDATA[
+      (function(d){
+      if(typeof(window.NINJA_CO_JP_ONETAG_BUTTON_e2aef6f1b469ac17ed853c3386d4904e)=='undefined'){
+      document.write("<sc"+"ript type='text\/javascript' src='\/\/omt.shinobi.jp\/b\/e2aef6f1b469ac17ed853c3386d4904e'><\/sc"+"ript>");
+      }else{
+      window.NINJA_CO_JP_ONETAG_BUTTON_e2aef6f1b469ac17ed853c3386d4904e.ONETAGButton_Load();
+      }
+      })(document);
+      //]]>
+      </script><span class="ninja_onebutton_hidden" style="display:none;"></span><span style="display:none;" class="ninja_onebutton_hidden"></span>
+      </div>
+
     </section>
 
     <section class="main-content">
-    <div class="ninja_onebutton">
-    <script type="text/javascript">
-    //<![CDATA[
-    (function(d){
-    if(typeof(window.NINJA_CO_JP_ONETAG_BUTTON_e2aef6f1b469ac17ed853c3386d4904e)=='undefined'){
-    document.write("<sc"+"ript type='text\/javascript' src='\/\/omt.shinobi.jp\/b\/e2aef6f1b469ac17ed853c3386d4904e'><\/sc"+"ript>");
-    }else{
-    window.NINJA_CO_JP_ONETAG_BUTTON_e2aef6f1b469ac17ed853c3386d4904e.ONETAGButton_Load();}
-    })(document);
-    //]]>
-    </script><span class="ninja_onebutton_hidden" style="display:none;"></span><span style="display:none;" class="ninja_onebutton_hidden"></span>
-    </div>
 
 <h1><a id="jw-cad-for-mac" class="anchor" href="#jw-cad-for-mac" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JW-CAD for Mac</h1>
 
