ソーシャルボタンの幅調整

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <a href="https://github.com/KEINOS/Jw_cad-for-Mac" class="btn">View on GitHub</a>
       <a href="https://github.com/KEINOS/Jw_cad-for-Mac/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/KEINOS/Jw_cad-for-Mac/tarball/master" class="btn">Download .tar.gz</a>
-      <div class="ninja_onebutton">
+<div style="width:50%" id="idSocialButton">
+<div class="ninja_onebutton">
       <script type="text/javascript">
       //<![CDATA[
       (function(d){
@@ -29,6 +30,7 @@
       //]]>
       </script><span class="ninja_onebutton_hidden" style="display:none;"></span><span style="display:none;" class="ninja_onebutton_hidden"></span>
       </div>
+</div><!-- /idSocialButton -->
 
     </section>
 
