--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="https://github.com/KEINOS/Jw_cad-for-Mac" class="btn">View on GitHub</a>
       <a href="https://github.com/KEINOS/Jw_cad-for-Mac/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/KEINOS/Jw_cad-for-Mac/tarball/master" class="btn">Download .tar.gz</a>
-<div style="width:50%" id="idSocialButton">
+<div style="width:50%; margin:auto;" id="idSocialButton">
 <div class="ninja_onebutton">
       <script type="text/javascript">
       //<![CDATA[
