掲示板のGoogleガジェット追加

--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
 	<li><a href="https://groups.google.com/forum/embed/?#!forum/jw-cad_for_mac">JW-CAD for Mac 掲示板</a> </li>
 </ul>
 
+<div style="wdith:100%; padding: 4em;">
+	<iframe id="forum_embed" src="javascript:void(0)" scrolling="no" frameborder="0" width="900" height="700"></iframe>
+	<script type="text/javascript">
+		document.getElementById("forum_embed").src = "https://groups.google.com/forum/embed/?place=forum/jw-cad_for_mac&showsearch=true&showpopout=true&parenturl=" + encodeURIComponent(window.location.href);
+	</script>
+</div>
+
 <p><strong>【注意】　"JW-CAD for Mac"やMac OSXに依存する質問（インストールの仕方や文字化け）などは、本家の方に質問されないようにしてください。</strong></p>
 
 <h2><a id="内包アプリのバージョン" class="anchor" href="#%E5%86%85%E5%8C%85%E3%82%A2%E3%83%97%E3%83%AA%E3%81%AE%E3%83%90%E3%83%BC%E3%82%B8%E3%83%A7%E3%83%B3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>内包アプリのバージョン</h2>
