埋め込み掲示板のレイアウト調整
横幅100％＋枠を付けました。

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	<li><a href="https://groups.google.com/forum/embed/?#!forum/jw-cad_for_mac">JW-CAD for Mac 掲示板</a> </li>
 </ul>
 
-<div style="wdith:100%; padding: 4em;">
+<div style="wdith:100%; padding:0; margin:0; border:1px solid gray;">
 	<iframe id="forum_embed" src="javascript:void(0)" scrolling="no" frameborder="0" width="900" height="700"></iframe>
 	<script type="text/javascript">
 		document.getElementById("forum_embed").src = "https://groups.google.com/forum/embed/?place=forum/jw-cad_for_mac&showsearch=true&showpopout=true&parenturl=" + encodeURIComponent(window.location.href);
