掲示板の埋め込みの調整
表示情報のクエリ修正

--- a/index.html
+++ b/index.html
@@ -94,7 +94,13 @@
 <div style="wdith:100%; padding:0; margin:0; border:1px solid gray;">
 	<iframe id="forum_embed" src="javascript:void(0)" scrolling="no" frameborder="0" width="900" height="700"></iframe>
 	<script type="text/javascript">
-		document.getElementById("forum_embed").src = "https://groups.google.com/forum/embed/?place=forum/jw-cad_for_mac&showsearch=true&domian=&keinos.github.io&showpopout=true&parenturl=" + encodeURIComponent(window.location.href);
+		document.getElementById("forum_embed").src =
+			"https://groups.google.com/forum/embed/?place=forum/jw-cad_for_mac" + 
+			"&showsearch=true" +
+			"&domian=keinos.github.io" +
+			"&hideforumtitle=true" +
+			"&showpopout=true" +
+			"&parenturl=" + encodeURIComponent(window.location.href);
 	</script>
 </div>
 
