--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <hr>
 
-<p>■JW-CAD for Mac 公式サイト : <a href="http://keinos.github.io/Jw_cad-for-Mac/">http://keinos.github.io/Jw_cad-for-Mac</a></p>
+<p>■JW-CAD for Mac 公式サイト : <a href="https://keinos.github.io/Jw_cad-for-Mac/">https://keinos.github.io/Jw_cad-for-Mac</a></p>
 
 <p>■JW-CAD for Mac 情報交換 : <a href="https://groups.google.com/forum/embed/?#!forum/jw-cad_for_mac">https://groups.google.com/forum/embed/?#!forum/jw-cad_for_mac</a> </p>
 
@@ -193,7 +193,7 @@
 
 <ul>
 	<li>著作者: KEINOS &amp; JW-CAD for Mac Project</li>
-	<li>公式サイト: <a href="http://keinos.github.io/Jw_cad-for-Mac">http://keinos.github.io/Jw_cad-for-Mac</a></li>
+	<li>公式サイト: <a href="https://keinos.github.io/Jw_cad-for-Mac">https://keinos.github.io/Jw_cad-for-Mac</a></li>
 	<li>ライセンス: GNU LGPL v2.1</li>
 </ul>
 
