indexの文言修正
有志によるアプリである旨の表記、および小さい修正。

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <h3><a id="ver20160601" class="anchor" href="#ver20160601" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ver.2016.06.01</h3>
 
-<p>　"JW-CAD for Mac" は、Windows版 "Jw_cad"（以下Jww）をMacのOSXでも使えるように工夫したフリーウェア・ソフトです。</p>
+<p>　"JW-CAD for Mac" は、Windows版 "Jw_cad"（以下Jww）をMacのOSXでも動作するように工夫した有志によるフリーウェア・ソフトです。</p>
 
 <hr>
 
@@ -53,7 +53,7 @@
 
 <h2><a id="概要" class="anchor" href="#%E6%A6%82%E8%A6%81" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>概要</h2>
 
-<p>　DOSの時代からある日本の老舗CADソフト"<a href="http://www.jwcad.net/">Jw_cad</a>"のWindows版を、Windowsユーザー以外にも幅広く知ってもらいたい・使ってもらいたいという願望から、UNIX、とりわけMacのOSXでも使えるように<a href="http://ja.wikipedia.org/wiki/Wine">Wine</a>と<a href="http://www.jwcad.net/">Jw_cad</a>を<a href="http://wineskin.urgesoftware.com/">Wineskin Winery</a>を使って1つのアプリとしてラッピングしたものです。</p>
+<p>　DOSの時代からある日本の老舗CADソフト"<a href="http://www.jwcad.net/">Jw_cad</a>"のWindows版を、Windowsユーザー以外にも幅広く知ってもらいたい・使ってもらいたいという願望から、UNIXとりわけMacのOSXでも使えるように<a href="http://ja.wikipedia.org/wiki/Wine">Wine</a>と<a href="http://www.jwcad.net/">Jw_cad</a>を<a href="http://wineskin.urgesoftware.com/">Wineskin Winery</a>でラッピングして、1つのアプリのようにしたものです。</p>
 
 <p>　ダウンロードすると、Jwwの安定バージョン(Ver.7.11)と最新バージョン(Ver.8系)の２つが同梱されています。</p>
 
