ページ内リンクを追加

--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
 
 <p>　"JW-CAD for Mac" は、Windows版 "Jw_cad"（以下Jww）をMacのOSXでも動作するように工夫した有志によるフリーウェア・ソフトです。</p>
 
-<hr>
+<div class="btn-group btn-group-justified">
+    	<a class="btn btn-default">概要・仕様</a>
+    <a class="btn btn-primary">インストール</a>
+    <a class="btn btn-success">掲示板</a>
+    <a class="btn btn-info">免責事項</a>
+    <a class="btn btn-warning">リンク</a>
+    <a class="btn btn-danger">&nbsp;</a>
+</div>
 
 <p>■JW-CAD for Mac 公式サイト : <a href="https://keinos.github.io/Jw_cad-for-Mac/">https://keinos.github.io/Jw_cad-for-Mac</a></p>
 
