ダウンロード・ファイルのデータサイズを追記

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				<p class="text-justify">DropboxからGitHubにサーバーを変更したので、ダウンロード速度が速くなりました。</p>
 				<p class="text-justify">ダウンロードすると、<span title="JWW, Jw_win">Jw_cad</span>の安定バージョン(Ver.7.11)と最新バージョン(Ver.8系)の２つが同梱されています。</p>
 				<p class="text-justify">なお、内包されている<span title="JWW, Jw_win">Jw_cad</span>は、<a href="https://ja.wikipedia.org/wiki/%E3%83%90%E3%83%8B%E3%83%A9_(%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2)" target="_blank">バニラ</a>状態つまり本体プログラムの改変なく、設定も そのままの状態（インストール直後の状態）なので、各種設定やカスタムはご自身で行っていただく必要があります。</p>
-				<p class="p-t-2 indent-none"><a class="btn btn-success" href="https://github.com/KEINOS/Jw_cad-for-Mac/archive/master.zip" role="button">ダウンロード（Zip形式） &raquo;</a></p>
+				<p class="p-t-2 indent-none"><a class="btn btn-success" href="https://github.com/KEINOS/Jw_cad-for-Mac/archive/master.zip" role="button">ダウンロード（Zip形式, 555.3MB） &raquo;</a></p>
 				<p class="text-center indent-none"><a href="#install"><small>インストール方法</small></a></p>
 			</div><!-- /.col-lg-4 -->
 	
@@ -192,7 +192,7 @@
 				<img id="idMacOSXLogo" class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 				<h2>対応OS</h2>
 				<ul class="list-group">
-					<li class="list-group-item">macOS v10.12 Sierra <span class="label label-default">New</span></li>
+					<li class="list-group-item"><del>macOS v10.12 Sierra</del><br><small>新規インストール非対応 ※</small></li>
 					<li class="list-group-item">OS X v10.11 El Capitan</li>
 					<li class="list-group-item">OS X v10.10 Yosemite</li>
 					<li class="list-group-item">OS X v10.9 Mavericks</li>
@@ -200,6 +200,7 @@
 					<li class="list-group-item">Mac OS X v10.7 Lion</li>
 					<li class="list-group-item">Mac OS X v10.6 Snow Leopard</li>
 				</ul>
+				<p><small>※OSをSierraにアップグレードする前にインストール済みの場合は一部動作しますが、アップグレード後にインストールする場合は動作しないことを確認しています。</small></p>
 			</div><!-- /.col-lg-4 -->
 		</div><!-- /.row -->
 		
