--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
 				<h2 class="p-b-2">バージョン情報</h2>
 				<dl class="dl-horizontal">
 					<dt class="">JW-CAD for Mac</dt>
-					<dd class="text-justify">20161029</dd>
+					<dd class="text-justify">20161201 <span class="label label-default">New</span></dd>
 					<dd class="text-justify"><small>※インストール後のバージョンの確認方法：アイコンを右クリック（control+クリック）して「情報を見る」を選んだ後の「一般情報」にバージョンの記載があります。</small></dd>
 
 					<dt class=""><span title="JWW, Jw_win">Jw_cad</span></dt>
 					<dd class="text-justify">7.11, 8.01b</dd>
 					
 					<dt class="">WineHQ</dt>
-					<dd class="text-justify">1.9.21 <span class="label label-default">New</span></dd>
+					<dd class="text-justify">1.9.21</dd>
 					
 					<dt class="">Wineskin</dt>
 					<dd class="text-justify">2.6.2</dd>
@@ -192,7 +192,7 @@
 				<img id="idMacOSXLogo" class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 				<h2>対応OS</h2>
 				<ul class="list-group">
-					<li class="list-group-item"><del>macOS v10.12 Sierra</del><br><small>新規インストール非対応 ※</small></li>
+					<li class="list-group-item">macOS v10.12 Sierra <span class="label label-default">New</span> ※</li>
 					<li class="list-group-item">OS X v10.11 El Capitan</li>
 					<li class="list-group-item">OS X v10.10 Yosemite</li>
 					<li class="list-group-item">OS X v10.9 Mavericks</li>
@@ -200,7 +200,7 @@
 					<li class="list-group-item">Mac OS X v10.7 Lion</li>
 					<li class="list-group-item">Mac OS X v10.6 Snow Leopard</li>
 				</ul>
-				<p><small>※OSをSierraにアップグレードする前にインストール済みの場合は一部動作しますが、アップグレード後にインストールする場合は動作しないことを確認しています。</small></p>
+				<p><small>※初回起動時にアプリケーション・フォルダもしくは、ユーザーのアプリケーション・フォルダにインストールされている必要があります。</small></p>
 			</div><!-- /.col-lg-4 -->
 		</div><!-- /.row -->
 		
