Sierra対応の注意点追加

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 				<div class="list-group">
 					<ol>
 						<li>ダウンロードしたZIPファイルを解凍します。</li>
-						<li>解凍されたファイルのうち下記の、いずれか利用したい方を「アプリケーション」フォルダや任意の場所に移動します。※
+						<li>解凍されたファイルのうち下記の、いずれか利用したい方を<strong style="#ff6600">「アプリケーション」フォルダに移動します。※</strong>
 						    <ul>
     						    <li>"JW-CAD_for_Mac-V.7.11.app"<br>（Jw_cad v.7.11）</li>
     						    <li>"JW-CAD_for_Mac-V.8.01b.app"<br>（Jw_cad v.8.01b）</li>
@@ -257,7 +257,7 @@
                         </li>
 						<li>設置したアプリを、右クリック（control+クリック）して「開く」を選択し、警告画面でも「開く」を選ぶとアプリが起動します。</li>
 					</ol>
-					<p><small>※ユーザーフォルダ内の「アプリケーション」フォルダに移動することをおすすめします。JW-CAD for Mac内のCドライブに保存されたデータは、アプリ内部に保存されるためです。</small></p>
+					<p><small>※Sierraの場合、初回起動時にアプリケーション・フォルダ以外の場所で起動するとロックされ起動できなくなります。また、複数人（別アカウント）で利用する場合、ユーザーフォルダ内の「アプリケーション」フォルダに各々インストールしてください。JW-CAD for Mac内のCドライブに保存されたデータはアプリ内部に保存されだけでなく、Sierraのセキュリティによりインストールしたアカウント以外で起動できなくなります。</small></p>
 				</div>
 			</div><!-- /.col-lg-3 -->
 		
