注意書きの色味修正

--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
 				<div class="list-group">
 					<ol>
 						<li>ダウンロードしたZIPファイルを解凍します。</li>
-						<li>解凍されたファイルのうち下記の、いずれか利用したい方を<strong style="#ff6600">「アプリケーション」フォルダに移動します。※</strong>
+						<li>解凍されたファイルのうち下記の、いずれか利用したい方を<strong style="colof:#ff6600">「アプリケーション」フォルダに移動します。※</strong>
 						    <ul>
-    						    <li>"JW-CAD_for_Mac-V.7.11.app"<br>（Jw_cad v.7.11）</li>
-    						    <li>"JW-CAD_for_Mac-V.8.01b.app"<br>（Jw_cad v.8.01b）</li>
+    						    <li>"JW-CAD.7.11_for_Mac.app"</li>
+    						    <li>"JW-CAD.8.01b_for_Mac.app"</li>
                             </ul>
                         </li>
 						<li>設置したアプリを、右クリック（control+クリック）して「開く」を選択し、警告画面でも「開く」を選ぶとアプリが起動します。</li>
