コメント追加

--- a/index.html
+++ b/index.html
@@ -128,14 +128,13 @@
 					<img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
 					<div class="container">
 					<div class="carousel-caption">
-						<h1>One more for good measure.</h1>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+						<h1>Powered by GitHub and <a href="https://blog.keinos.com/">KEINOS</a></h1>
+						<p>このアプリは、KEINOSのGitHubリポジトリで管理されています。</p>
 						<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
 					</div>
 					</div>
 				</div>
--->
-	
+-->	
 			</div>
 		
 			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
