--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 			<div class="col-lg-3 col-md-6">
 				<h3>JW-CAD for Mac</h3>
 				<div class="list-group">
-					<p class="list-group-item">著作者:<br>KEINOS & JW-CAD for Mac Project</p>
+					<p class="list-group-item">著作者:<br><a href="https://blog.keinos.com/">KEINOS</a> & JW-CAD for Mac Project</p>
 					<p class="list-group-item">公式サイト:<br>https://keinos.github.io/Jw_cad-for-Mac</p>
 					<p class="list-group-item">ライセンス:<br>GNU LGPL v2.1</p>
 				</div>
