--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<title>JW-CAD for Mac (Mac版Jw_cad) by KEINOS</title>
 	<meta name="description" content="'JW-CAD for Mac'はMac版Jw_cadです。日本製CADの老舗2次元汎用CAD'Jw_cad'（Jww, Jw_win）を、MacOSXでも動作するようにオープンソースのソフトで工夫した有志によるフリーソフトです。">
 	<meta name="author" content="KEINOS">
 	
-	<title>'JW-CAD for Mac'(Mac版Jw_cad) by KEINOS</title>
 	
 	<!-- Bootstrap core CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
