Descriptionタグ内の文言を修正

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<title>JW-CAD for Mac (Mac版Jw_cad) by KEINOS</title>
-	<meta name="description" content="'JW-CAD for Mac'はMac版Jw_cadです。日本製CADの老舗2次元汎用CAD'Jw_cad'（Jww, Jw_win）を、MacOSXでも動作するようにオープンソースのソフトで工夫した有志によるフリーソフトです。">
+	<meta name="description" content="'JW-CAD for Mac'はMac版Jw_cadです。日本製CADの老舗2次元汎用CAD'Jw_cad'（Jww, Jw_win）を、MacOSXでも動作するようにオープンソースのソフトで工夫したボランティアによるフリーソフトです。">
 	<meta name="author" content="KEINOS">
 	
 	
