インストール手順のyoutube動画のリンク追加

--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
 					</div>
 				</div>
 
-<!--
 				<div class="item">
 					<img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
 					<div class="container">
-					<div class="carousel-caption">
-						<h1>Powered by GitHub and <a href="https://blog.keinos.com/">KEINOS</a></h1>
-						<p>このアプリは、KEINOSのGitHubリポジトリで管理されています。</p>
-						<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-					</div>
+						<style>
+						  #ytWrapper{ position: relative; width: 50%; margin: auto; margin-top:100px; }
+						  #ytWrapper:before{ content:""; display: block; padding-top: 56.25%; }
+						  #ytContent{ position: absolute; top:0; left:0; width:100%; height:100%; }
+						</style>
+						<div id="ytWrapper"><iframe id="ytContent" src="https://www.youtube-nocookie.com/embed/c_BdVzRjSHs?rel=0&autoplay=0&playlist=PLDh2nF8XSHRBnIN0BAsPGcNbpFLoF7SYU" frameborder="0" allowfullscreen></iframe></div>
 					</div>
 				</div>
--->	
+
 			</div>
 		
 			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -246,6 +246,7 @@
 			<div class="col-lg-3 col-md-6" id="install">
 				<h3>インストール方法</h3>
 				<div class="list-group">
+					<p>[<a href="https://blog.keinos.com/jw-cad_install" target="_blank">インストール手順の動画を観る...</a>]</p>
 					<ol>
 						<li>ダウンロードしたZIPファイルを解凍します。</li>
 						<li>解凍されたファイルのうち下記の、いずれか利用したい方を<strong style="colof:#ff6600">「アプリケーション」フォルダに移動します。※</strong>
