--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">仕様 <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="#os">対応OS</a></li>
+							<li><a href="#printer">対応プリンタ</a></li>
 							<li><a href="#howto">ご利用のポイント・注意点</a></li>
 							<li><a href="#credits">著作権及び使用条件</a></li>
 <!--
@@ -284,13 +285,13 @@
 				</div>
 			</div><!-- /.col-lg-3 -->
 
-			<div class="col-lg-3 col-md-6">
-				<h3>不具合（対応中）</h3>
+			<div class="col-lg-3 col-md-6" id="printer">
+				<h3>対応プリンタ</h3>
 				<div class="list-group">
-					<ol>
-						<li>ショートカットが効かない。<br><small>altキー以外のショートカットが動作しませんが、入力モードを直接入力にすると使用できます。</small></li>
-						<li>ファイルの拡張子の関連付けができない。</li>
-					</ol>
+					<p><small>動作確認済みプリンタの一覧です。動作したプリンタは掲示板で報告してくださると助かります。</small></p>
+					<ul>
+						<li><a href="https://onflapp.wordpress.com/vipriser/" target="_blank">VipRiser（PDFプリンタ）</a><br>OSX 10.6〜10.12</li>
+					</ul>
 				</div>
 			</div><!-- /.col-lg-3 -->
 
