動画へのリンクを修正

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 		
 		.indent-none { text-indent: 0em; }
 
+		.cLink {
+			 background-color: fuchsia;
+		}
+		
+		.cPadding-none {
+			padding:0;
+		}
+
 	</style>
 </head>
 <!-- NAVBAR ================================================== -->
@@ -163,8 +171,8 @@
 				<h2 class="p-b-2">バージョン情報</h2>
 				<dl class="dl-horizontal">
 					<dt class="">JW-CAD for Mac</dt>
-					<dd class="text-justify">20161201 <span class="label label-default">New</span></dd>
-					<dd class="text-justify"><small>※インストール後のバージョンの確認方法：アイコンを右クリック（control+クリック）して「情報を見る」を選んだ後の「一般情報」にバージョンの記載があります。</small></dd>
+					<dd class="text-justify">20161205 <span class="label label-default">New</span></dd>
+					<dd class="text-justify"><small>※インストール後のバージョンの確認方法：アイコンを右クリック（control+クリック）して「情報を見る」を選んだ後の「一般情報」にバージョンの記載があります。[<a href="https://github.com/KEINOS/Jw_cad-for-Mac/releases" target="_blank">変更履歴</a>]</small></dd>
 
 					<dt class=""><span title="JWW, Jw_win">Jw_cad</span></dt>
 					<dd class="text-justify">7.11, 8.01b</dd>
@@ -174,6 +182,9 @@
 					
 					<dt class="">Wineskin</dt>
 					<dd class="text-justify">2.6.2</dd>
+
+					<dt class="">Mascot</dt>
+					<dd class="text-justify"><a href="https://github.com/KEINOS/Jw_cad-for-Mac/tree/master/Resources/logo" target="_blank">DJ犬ジョー</a> by ook氏</dd>
 					
 				</dl>
 			</div><!-- /.col-lg-4 -->
@@ -181,11 +192,11 @@
 			<div class="col-lg-4" id="download">
 				<img id="idGitHubLogo" class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 				<h2 class="p-b-2">ダウンロード</h2>
-				<p class="text-justify">DropboxからGitHubにサーバーを変更したので、ダウンロード速度が速くなりました。</p>
+				<p class="text-justify">Dropboxから<a href="https://github.com/KEINOS/Jw_cad-for-Mac" target="_blank">GitHub</a>にサーバーを変更したので、ダウンロード速度が速くなりました。</p>
 				<p class="text-justify">ダウンロードすると、<span title="JWW, Jw_win">Jw_cad</span>の安定バージョン(Ver.7.11)と最新バージョン(Ver.8系)の２つが同梱されています。</p>
 				<p class="text-justify">なお、内包されている<span title="JWW, Jw_win">Jw_cad</span>は、<a href="https://ja.wikipedia.org/wiki/%E3%83%90%E3%83%8B%E3%83%A9_(%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2)" target="_blank">バニラ</a>状態つまり本体プログラムの改変なく、設定も そのままの状態（インストール直後の状態）なので、各種設定やカスタムはご自身で行っていただく必要があります。</p>
 				<p class="p-t-2 indent-none"><a class="btn btn-success" href="https://github.com/KEINOS/Jw_cad-for-Mac/archive/master.zip" role="button">ダウンロード（Zip形式, 555.3MB） &raquo;</a></p>
-				<p class="text-center indent-none"><a href="#install"><small>インストール方法</small></a><br><a href="https://blog.keinos.com/jw-cad_install" target="_blank"><small>インストール手順の動画</small></a></p>
+				<p class="text-center indent-none"><a href="#install"><small>インストール方法</small></a><br><a href="https://blog.keinos.com/20161201_1802" target="_blank"><small>インストール手順の動画</small></a></p>
 			</div><!-- /.col-lg-4 -->
 	
 			<div class="col-lg-4" id="os">
@@ -193,14 +204,14 @@
 				<h2>対応OS</h2>
 				<ul class="list-group">
 					<li class="list-group-item">macOS v10.12 Sierra <span class="label label-default">New</span> ※</li>
-					<li class="list-group-item">OS X v10.11 El Capitan</li>
+					<li class="list-group-item">OS X v10.11 El Capitan ※</li>
 					<li class="list-group-item">OS X v10.10 Yosemite</li>
 					<li class="list-group-item">OS X v10.9 Mavericks</li>
 					<li class="list-group-item">OS X v10.8 Mountain Lion</li>
 					<li class="list-group-item">Mac OS X v10.7 Lion</li>
 					<li class="list-group-item">Mac OS X v10.6 Snow Leopard</li>
 				</ul>
-				<p><small>※初回起動時にアプリケーション・フォルダもしくは、ユーザーのアプリケーション・フォルダにインストールされている必要があります。</small></p>
+				<p style="font-size: x-small">※初回起動時にアプリケーション・フォルダもしくは、ユーザーのアプリケーション・フォルダに<a href="#install">インストール</a>されている必要があります。</p>
 			</div><!-- /.col-lg-4 -->
 		</div><!-- /.row -->
 		
@@ -247,7 +258,7 @@
 			<div class="col-lg-3 col-md-6" id="install">
 				<h3>インストール方法</h3>
 				<div class="list-group">
-					<p>[<a href="https://blog.keinos.com/jw-cad_install" target="_blank">インストール手順の動画を観る...</a>]</p>
+					<p class="indent-none"><a style="width:100%" class="btn btn-info" href="https://blog.keinos.com/20161201_1802" target="_blank">インストール手順の動画を観る</a></p>
 					<ol>
 						<li>ダウンロードしたZIPファイルを解凍します。</li>
 						<li>解凍されたファイルのうち下記の、いずれか利用したい方を<strong style="colof:#ff6600">「アプリケーション」フォルダに移動します。※</strong>
@@ -290,7 +301,7 @@
 				<div class="list-group">
 					<p><small>動作確認済みプリンタの一覧です。動作したプリンタは掲示板で報告してくださると助かります。</small></p>
 					<ul>
-						<li><a href="https://onflapp.wordpress.com/vipriser/" target="_blank">VipRiser（PDFプリンタ）</a><br>OSX 10.6〜10.12</li>
+						<li><a href="https://onflapp.wordpress.com/vipriser/" target="_blank">VipRiser（PDFプリンタ）</a><br>確認済：OSX 10.6〜10.12<br><a style="width:100%" class="btn btn-info" href="https://blog.keinos.com/20161205_1798" target="_blank">インストール手順の動画を観る</a></li>
 					</ul>
 				</div>
 			</div><!-- /.col-lg-3 -->
