Youtube動画をインストールからプレイリストに変更

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						  #ytWrapper:before{ content:""; display: block; padding-top: 56.25%; }
 						  #ytContent{ position: absolute; top:0; left:0; width:100%; height:100%; }
 						</style>
-						<div id="ytWrapper"><iframe id="ytContent" src="https://www.youtube-nocookie.com/embed/c_BdVzRjSHs?rel=0&autoplay=0&playlist=PLDh2nF8XSHRBnIN0BAsPGcNbpFLoF7SYU" frameborder="0" allowfullscreen></iframe></div>
+						<div id="ytWrapper"><iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLDh2nF8XSHRBnIN0BAsPGcNbpFLoF7SYU" frameborder="0" allowfullscreen></iframe></div>
 					</div>
 				</div>
 
