youtube埋め込みのCSSの修正

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<title>JW-CAD for Mac (Mac版Jw_cad) by KEINOS</title>
-	<meta name="description" content="'JW-CAD for Mac'はMac版Jw_cadです。日本製CADの老舗2次元汎用CAD'Jw_cad'（Jww, Jw_win）を、MacOSXでも動作するようにオープンソースのソフトで工夫したボランティアによるフリーソフトです。">
+	<meta name="description" content="'JW-CAD for Mac'はMac版Jw_cadです。日本製CADの老舗2次元汎用CAD'Jw_cad'（Jww, Jw_win）を、MacOSXでも動作するようにオープンソースのソフトで工夫した有志たちによるフリーソフトです。">
 	<meta name="author" content="KEINOS">
 	
 	
@@ -140,7 +140,7 @@
 						  #ytWrapper:before{ content:""; display: block; padding-top: 56.25%; }
 						  #ytContent{ position: absolute; top:0; left:0; width:100%; height:100%; }
 						</style>
-						<div id="ytWrapper"><iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLDh2nF8XSHRBnIN0BAsPGcNbpFLoF7SYU" frameborder="0" allowfullscreen></iframe></div>
+						<div id="ytWrapper"><iframe id="ytContent" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLDh2nF8XSHRBnIN0BAsPGcNbpFLoF7SYU" frameborder="0" allowfullscreen></iframe></div>
 					</div>
 				</div>
 
