--- a/index.html
+++ b/index.html
@@ -283,9 +283,6 @@
 					</ol>
 					<p>※このフォルダはエイリアス（ショートカット）で、同階層の"Contents" → "Resources" → "drive_c"フォルダが厳密なCドライブの保存先です。</p>
 				</div>
-			</div><!-- /.col-lg-3 -->
-
-			<div class="col-lg-3 col-md-6">
 				<h3>フォントについて</h3>
 				<div class="list-group text-justify small">
 					<p>"JW-CAD for Mac"でサポートしているフォントはTrueTypeフォントのうちでも下記のもののみです。</p>
@@ -296,10 +293,20 @@
 				</div>
 			</div><!-- /.col-lg-3 -->
 
+			<div class="col-lg-3 col-md-6">
+				<h3>対応プラグイン</h3>
+				<div class="list-group text-justify small">
+					<p>"JW-CAD for Mac"で動作確認済みのプラグイン一覧です。</p>
+					<p>これら以外のプラグインで動作したものがあれば、<a href="#forum">掲示板</a>にてご報告くださると助かります。適宜、追加していきます。</p>
+					<h4>Susieプラグイン</h4>
+					<p class="list-group-item"><a href="http://www.digitalpad.co.jp/~takechin/download.html" target="_blank">Susie Plug-in package ( BMP以外の画像の埋め込み )</a><br><small>JPEG、JPG/GIF/TIFF、TIF/Pi/PIC/Pic2/XLD4/MAG/PICT形式の画像を埋め込めるようになります。透過GIFやPNGには対応していません。</small></p>
+				</div>
+			</div><!-- /.col-lg-3 -->
+
 			<div class="col-lg-3 col-md-6" id="printer">
 				<h3>対応プリンタ</h3>
 				<div class="list-group">
-					<p><small>動作確認済みプリンタの一覧です。動作したプリンタは掲示板で報告してくださると助かります。</small></p>
+					<p><small>動作確認済みプリンタの一覧です。動作したプリンタは<a href="#forum">掲示板</a>にてご報告くださると助かります。適宜、追加していきます。</small></p>
 					<ul>
 						<li><a href="https://onflapp.wordpress.com/vipriser/" target="_blank">VipRiser（PDFプリンタ）</a><br>確認済：OSX 10.6〜10.12<br><a style="width:100%" class="btn btn-info" href="https://blog.keinos.com/20161205_1798" target="_blank">インストール手順の動画を観る</a></li>
 					</ul>
