プラグインへのリンク追加

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="#os">対応OS</a></li>
 							<li><a href="#printer">対応プリンタ</a></li>
+							<li><a href="#plugin">対応プラグイン</a></li>
 							<li><a href="#howto">ご利用のポイント・注意点</a></li>
 							<li><a href="#credits">著作権及び使用条件</a></li>
 <!--
@@ -293,7 +294,7 @@
 				</div>
 			</div><!-- /.col-lg-3 -->
 
-			<div class="col-lg-3 col-md-6">
+			<div class="col-lg-3 col-md-6" id="plugin">
 				<h3>対応プラグイン</h3>
 				<div class="list-group text-justify small">
 					<p>"JW-CAD for Mac"で動作確認済みのプラグイン一覧です。</p>
