バージョン情報の変更

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<h2 class="p-b-2">バージョン情報</h2>
 				<dl class="dl-horizontal">
 					<dt class="">JW-CAD for Mac</dt>
-					<dd class="text-justify">20161205 <span class="label label-default">New</span></dd>
+					<dd class="text-justify">20161214</dd>
 					<dd class="text-justify"><small>※インストール後のバージョンの確認方法：アイコンを右クリック（control+クリック）して「情報を見る」を選んだ後の「一般情報」にバージョンの記載があります。[<a href="https://github.com/KEINOS/Jw_cad-for-Mac/releases" target="_blank">変更履歴</a>]</small></dd>
 
 					<dt class=""><span title="JWW, Jw_win">Jw_cad</span></dt>
