--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
 					<ul>
 						<li><a href="https://onflapp.wordpress.com/vipriser/" target="_blank">VipRiser（PDFプリンタ）</a><br>確認済：OSX 10.6〜10.12<br><a style="width:100%" class="btn btn-info" href="https://blog.keinos.com/20161205_1798" target="_blank">インストール手順の動画を観る</a></li>
 						<li><a href="http://www.brother.co.jp/product/printer/inkjet/mfcj6573cdw/" target="_blank">brother MFC-J6573CDW（インクジェット複合機）</a></li>
+						<li><a href="http://www.epson.jp/products/back/hyou/printer/ep802a.htm" target="_blank">EPSON Colorio EP-802A（インクジェット複合機）</a></li>
 					</ul>
 				</div>
 			</div><!-- /.col-lg-3 -->
