PNG画像プラグインを追加

--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
 					<p>これら以外のプラグインで動作したものがあれば、<a href="#forum">掲示板</a>にてご報告くださると助かります。適宜、追加していきます。</p>
 					<h4>Susieプラグイン</h4>
 					<p class="list-group-item"><a href="http://www.digitalpad.co.jp/~takechin/download.html" target="_blank">Susie Plug-in package ( BMP以外の画像の埋め込み )</a><br><small>JPEG、JPG/GIF/TIFF、TIF/Pi/PIC/Pic2/XLD4/MAG/PICT形式の画像を埋め込めるようになります。透過GIFやPNGには対応していません。</small></p>
+					<p class="list-group-item"><a href="http://www.asahi-net.or.jp/~gv9k-setg/pcx.html" target="_blank">PNG関連（Susieプラグイン関連）</a><br><small><a href="http://www.asahi-net.or.jp/~gv9k-setg/indexj.html" target="_blank">ChangTa</a>さんによるPNG画像用のSusieプラグイン。</small></p>
+					
 				</div>
 			</div><!-- /.col-lg-3 -->
 
