リンク位置を修正

--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
 			<div class="col-lg-3 col-md-6" id="plugin">
 				<h3>対応プラグイン</h3>
 				<div class="list-group text-justify small">
+					<p class="indent-none"><a style="width:100%" class="btn btn-info" href="https://blog.keinos.com/20170109_2058" target="_blank">インストール手順の動画を観る</a></p>
 					<p>"JW-CAD for Mac"で動作確認済みのプラグイン一覧です。</p>
 					<p>これら以外のプラグインで動作したものがあれば、<a href="#forum">掲示板</a>にてご報告くださると助かります。適宜、追加していきます。</p>
 					<h4>Susieプラグイン</h4>
-					<div><a style="width:100%" class="btn btn-info" href="https://blog.keinos.com/20170109_2058" target="_blank">インストール手順の動画を観る</a></div>
 					<p class="list-group-item"><a href="http://www.digitalpad.co.jp/~takechin/download.html" target="_blank">Susie Plug-in package ( BMP以外の画像の埋め込み )</a><br><small>JPEG、JPG/GIF/TIFF、TIF/Pi/PIC/Pic2/XLD4/MAG/PICT形式の画像を埋め込めるようになります。透過GIFやPNGには対応していません。</small></p>
 					<p class="list-group-item"><a href="http://www.asahi-net.or.jp/~gv9k-setg/pcx.html" target="_blank">PNG関連（Susieプラグイン関連）</a><br><small><a href="http://www.asahi-net.or.jp/~gv9k-setg/indexj.html" target="_blank">ChangTa</a>さんによるPNG画像用のSusieプラグイン。</small></p>
 
