プリンタ確認済みOSを追加

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 					<p><small>動作確認済みプリンタの一覧です。動作したプリンタは<a href="#forum">掲示板</a>にてご報告くださると助かります。適宜、追加していきます。</small></p>
 					<ul>
 						<li><a href="https://onflapp.wordpress.com/vipriser/" target="_blank">VipRiser（PDFプリンタ）</a><br>確認済：OSX 10.6〜10.12<br><a style="width:100%" class="btn btn-info" href="https://blog.keinos.com/20161205_1798" target="_blank">インストール手順の動画を観る</a></li>
-						<li><a href="http://www.brother.co.jp/product/printer/inkjet/mfcj6573cdw/" target="_blank">brother MFC-J6573CDW（インクジェット複合機）</a></li>
+						<li><a href="http://www.brother.co.jp/product/printer/inkjet/mfcj6573cdw/" target="_blank">brother MFC-J6573CDW（インクジェット複合機）</a><br>確認済：OSX 10.11<br></li>
 						<li><a href="http://www.epson.jp/products/back/hyou/printer/ep802a.htm" target="_blank">EPSON Colorio EP-802A（インクジェット複合機）</a></li>
 					</ul>
 				</div>
