--- a/index.html
+++ b/index.html
@@ -382,7 +382,14 @@
 
 		<div class="row featurette">
 			<h2 class="featurette-heading">掲示板／FAQ／サポート</h2>
-            <div>
+			<style>
+			<!--
+				#wrapper_forum{ position: relative; width: 100%; }
+				#wrapper_forum:before{ content:""; display: block; padding-top: 56.25%; }
+				#forum_embed{ position: absolute; top:0; left:0; width:100%; height:100%; }
+			-->
+			</style>
+            <div id="wrapper_forum">
                 <iframe id="forum_embed"
                     src="javascript:void(0)"
                     scrolling="no"
@@ -390,13 +397,13 @@
                     width="900"
                     height="700">
                 </iframe>
-                <script type="text/javascript">
-                    document.getElementById('forum_embed').src =
-                    'https://groups.google.com/forum/embed/?place=forum/jw-cad_for_mac'
-                        + '&showsearch=true&showpopout=true&showtabs=false'
-                        + '&parenturl=' + encodeURIComponent(window.location.href);
-                </script>
             </div>
+            <script type="text/javascript">
+                document.getElementById('forum_embed').src =
+                'https://groups.google.com/forum/embed/?place=forum/jw-cad_for_mac'
+                    + '&showsearch=true&showpopout=true&showtabs=false'
+                    + '&parenturl=' + encodeURIComponent(window.location.href);
+            </script>
 		</div>
 
 		<hr class="featurette-divider">
