掲示板の横幅属性を削除。CSSで指定

--- a/index.html
+++ b/index.html
@@ -393,10 +393,8 @@
                 <iframe id="forum_embed"
                     src="javascript:void(0)"
                     scrolling="no"
-                    frameborder="0"
-                    width="900"
-                    height="700">
-                </iframe>
+                    frameborder="0">
+				</iframe>
             </div>
             <script type="text/javascript">
                 document.getElementById('forum_embed').src =
