掲示板の高さ変更

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 			<h2 class="featurette-heading">掲示板／FAQ／サポート</h2>
 			<style>
 			<!--
-				#wrapper_forum{ position: relative; width: 100%; }
+				#wrapper_forum{ position: relative; width: 100%; height: 30em; }
 				#wrapper_forum:before{ content:""; display: block; padding-top: 56.25%; }
 				#forum_embed{ position: absolute; top:0; left:0; width:100%; height:100%; }
 			-->
