docs: Changed ZIP file to download
Changed ZIP file to download from `master` to released v20161214 zip.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				<p class="text-justify">Dropboxから<a href="https://github.com/KEINOS/Jw_cad-for-Mac" target="_blank">GitHub</a>にサーバーを変更したので、ダウンロード速度が速くなりました。</p>
 				<p class="text-justify">ダウンロードすると、<span title="JWW, Jw_win">Jw_cad</span>の安定バージョン(Ver.7.11)と最新バージョン(Ver.8系)の２つが同梱されています。</p>
 				<p class="text-justify">なお、内包されている<span title="JWW, Jw_win">Jw_cad</span>は、<a href="https://ja.wikipedia.org/wiki/%E3%83%90%E3%83%8B%E3%83%A9_(%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2)" target="_blank">バニラ</a>状態つまり本体プログラムの改変なく、設定も そのままの状態（インストール直後の状態）なので、各種設定やカスタムはご自身で行っていただく必要があります。</p>
-				<p class="p-t-2 indent-none"><a class="btn btn-success" href="https://github.com/KEINOS/Jw_cad-for-Mac/archive/master.zip" role="button">ダウンロード（Zip形式, 555.3MB） &raquo;</a></p>
+				<p class="p-t-2 indent-none"><a class="btn btn-success" href="https://github.com/KEINOS/Jw_cad-for-Mac/archive/v20161214.zip" role="button">ダウンロード（v20161214Zip形式, 555.3MB） &raquo;</a></p>
 				<p class="text-center indent-none"><a href="#install"><small>インストール方法</small></a><br><a href="https://blog.keinos.com/20161201_1802" target="_blank"><small>インストール手順の動画</small></a></p>
 			</div><!-- /.col-lg-4 -->
 
